--- a/notenportal-frontend/src/app/components/klasse/klasse.component.html
+++ b/notenportal-frontend/src/app/components/klasse/klasse.component.html
@@ -1,1 +1,35 @@
-<p>klasse works!</p>
+<div>
+
+  <table mat-table [dataSource]="klasseDataSource">
+
+    <mat-text-column routerLink="/klasse-details" name="klassenname" headerText="Klassenname">
+    </mat-text-column>
+
+    <ng-container matColumnDef="actions">
+      <th *matHeaderCellDef class="w-75 th-center" mat-header-cell></th>
+      <td *matCellDef="let element" mat-cell style="text-align: end">
+        <button
+          *isInRoles="[roles.Update]"
+          (click)="edit(element)"
+          color="primary" mat-icon-button>
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button
+          *isInRoles="[roles.Admin]"
+          (click)="delete(element)"
+          color="primary" mat-icon-button>
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr  *matHeaderRowDef="columns" mat-header-row></tr>
+    <tr  *matRowDef="let row; columns: columns;" mat-row></tr>
+
+  </table>
+
+  <button *isInRoles="[roles.Admin]"(click)="add()"mat-raised-button color="primary">
+    Klasse erfassen
+  </button>
+
+</div>
