--- a/notenportal-frontend/src/app/components/klasse/klasse.component.html
+++ b/notenportal-frontend/src/app/components/klasse/klasse.component.html
@@ -2,7 +2,7 @@
 
   <table mat-table [dataSource]="klasseDataSource">
 
-    <mat-text-column routerLink="/klasse-details" name="klassenname" headerText="Klassenname">
+    <mat-text-column name="klassenname" headerText="Klassenname">
     </mat-text-column>
 
     <ng-container matColumnDef="actions">
