Schueler anzeigen und bearbeiten

--- a/notenportal-frontend/src/app/app.component.html
+++ b/notenportal-frontend/src/app/app.component.html
@@ -15,9 +15,9 @@
       <span>Klasse</span>
     </button>
     <button mat-menu-item
-      routerLink="/noten">
-      <mat-icon>Noten </mat-icon>
-      <span>Noten</span>
+      routerLink="/schueler">
+      <mat-icon>Schueler </mat-icon>
+      <span>Schueler</span>
     </button>
   </mat-menu>
 
