--- a/notenportal-frontend/src/app/components/schueler/schueler.component.html
+++ b/notenportal-frontend/src/app/components/schueler/schueler.component.html
@@ -1,1 +1,45 @@
-<p>schueler works!</p>
+<div>
+
+  <table mat-table [dataSource]="schuelerDataSource">
+
+    <mat-text-column name="name" headerText="Name">
+    </mat-text-column>
+
+    <mat-text-column name="nachname" headerText="Nachname">
+    </mat-text-column>
+
+
+    <ng-container matColumnDef="klasse">
+      <th *matHeaderCellDef mat-header-cell>Klasse</th>
+      <td *matCellDef="let element" mat-cell> {{element.klasse ? element.klasse.klassenname : ''}} </td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="actions">
+      <th *matHeaderCellDef class="w-75 th-center" mat-header-cell></th>
+      <td *matCellDef="let element" mat-cell style="text-align: end">
+        <button
+          *isInRoles="[roles.Update]"
+          (click)="edit(element)"
+          color="primary" mat-icon-button>
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button
+          *isInRoles="[roles.Admin]"
+          (click)="delete(element)"
+          color="primary" mat-icon-button>
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr  *matHeaderRowDef="columns" mat-header-row></tr>
+    <tr  *matRowDef="let row; columns: columns;" mat-row></tr>
+
+  </table>
+
+  <button *isInRoles="[roles.Admin]"(click)="add()"mat-raised-button color="primary">
+    Schueler erfassen
+  </button>
+
+</div>
