--- a/notenportal-frontend/src/app/app.component.html
+++ b/notenportal-frontend/src/app/app.component.html
@@ -19,6 +19,11 @@
       <mat-icon>Schueler </mat-icon>
       <span>Schueler</span>
     </button>
+    <button mat-menu-item
+      routerLink="/schulfach">
+      <mat-icon>Schulfach </mat-icon>
+      <span>Schulfach</span>
+    </button>
   </mat-menu>
 
   <span>Notenportal</span>
