--- a/notenportal-frontend/src/app/components/home/home.component.html
+++ b/notenportal-frontend/src/app/components/home/home.component.html
@@ -1,16 +1,4 @@
-<p>
-  <mat-toolbar>
-   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>Willkommen im Notenportal</span>
-  <span class="example-spacer"></span>
-  <app-login></app-login>
-</mat-toolbar>
-</p>
-
-
 <div>
-  <h1> </h1>
+  <h1> Willkomen {{username}} zurück auf userem Notenportal </h1>
 </div>
 
