--- a/notenportal-frontend/src/app/components/schulfach/schulfach.component.html
+++ b/notenportal-frontend/src/app/components/schulfach/schulfach.component.html
@@ -29,7 +29,7 @@
   </table>
 
   <button *isInRoles="[roles.Admin]"(click)="add()"mat-raised-button color="primary">
-    Schueler erfassen
+    Schulfach erfassen
   </button>
 
 </div>
