--- a/notenportal-frontend/src/app/components/home/home.component.html
+++ b/notenportal-frontend/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h1> Willkomen {{username}} zurück auf userem Notenportal </h1>
+  <h1> Willkomen {{username}} zurück auf unserem Notenportal </h1>
 </div>
 
